tests/error/test05.bloc
test07 {
   // Type error: initializing an integer variable with the value of a boolean variable
   boolean p = true ;
   int i = p;
}